# qt-py-rp2040-blink

./: CMakeLists.txt  README.md  main.c
